--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+NEXTAUTH_SECRET=your_generated_secret_here
+
 ADMIN_ROOT_NAME="Admin"
 ADMIN_ROOT_EMAIL="admin@example.com"
 ADMIN_ROOT_PASSWORD="admin123"
