--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "npm run prisma:bootstrap && npx jest && next build",
     "start": "next start",
     "lint": "next lint",
-
     "test": "npx jest",
     "prisma:bootstrap": "npm run prisma:setup && npm run prisma:seed",
     "prisma:setup": "npx prisma generate && npx prisma migrate deploy",
@@ -20,7 +19,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
