--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "npx jest",
+    "test:e2e:open": "npx cypress open",
+    "test:e2e:run": "npx cypress run",
     "next-auth:secret": "node scripts/next-auth-secret.js",
     "prisma:bootstrap": "npm run prisma:setup && npm run prisma:seed",
     "prisma:setup": "npx prisma generate && npx prisma migrate deploy",
